--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
     // window.addEventListener('resize', sendHeight);
     // setInterval(sendHeight, 1000); // Optional: keep syncing height in case of dynamic changes
     </script>
-<link rel="modulepreload" href="chunk-Y3L5CLTL.js"><link rel="modulepreload" href="chunk-2HBOEXKN.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-AXEUHMZV.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-L2JWZKGQ.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-5NHFSVDQ.js" type="module"></script></body>
 </html>
