--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@
     // window.addEventListener('resize', sendHeight);
     // setInterval(sendHeight, 1000); // Optional: keep syncing height in case of dynamic changes
     </script>
-<link rel="modulepreload" href="chunk-VLFML5DQ.js"><link rel="modulepreload" href="chunk-GKLTZMZP.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-4EJ52RKE.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-VLFML5DQ.js"><link rel="modulepreload" href="chunk-GKLTZMZP.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-GYQARKNC.js" type="module"></script></body>
 </html>
